--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
 <link rel="stylesheet" href="istriangle.css">   
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+
     <h2 class="heading">Welcome to Fun with Triangles</h2>
     <div class="selectionbox">
     <div class="row">
-        <a href="./Areaoftriangle.html">Area of Triangle</a>
-        <a href="./hypotenuse.html">Hypotenuse</a>
+        <a href="./Areaoftriangle.html"><div class="cell"><p>Area of Triangle</p></div></a>
+        <a href="./hypotenuse.html"><div class="cell"><p>Hypotenuse</p></div></a>
     </div>
     <div class="row">
-        <a href="./triangle_quiz.html">Triangle Quiz</a>
-        <a href="./istriangle.html">Is Triangle?</a>
+        <a href="./triangle_quiz.html"><div class="cell"><p>Triangle Quiz</p></div></a>
+        <a href="./istriangle.html"><div class="cell"><p>Is Triangle?</p></div></a>
     </div>
+
 </div>
 </body>
 </html>
